--- a/Verkaufsstellen_auflisten.html
+++ b/Verkaufsstellen_auflisten.html
@@ -8,6 +8,7 @@
     <link href="css/nav.css" rel="stylesheet" />
     <script type="text/javascript" src="js/station.js"></script>
   </head>
+
   <body>
     <div id="main">
       <div id="trailer">
@@ -16,7 +17,7 @@
       <div id="menuetop">
         <ul id="menu">
           <li>
-           <a href="index.html">HOME</a>
+           <a href="index.html">Startseite</a>
           </li>
         </ul>
       </div>
@@ -43,8 +44,10 @@
         </fieldset>
       
       </div>
+      
       <div id="menuefooter" class="clmenuefooter">
       </div>
+
       <div id="bottom">
       </div>
     </div>  
