--- a/suche_verkaufsstellen_name.html
+++ b/suche_verkaufsstellen_name.html
@@ -16,7 +16,7 @@
       <div id="menuetop">
         <ul id="menu">
           <li>
-           <a href="index.html">HOME</a>
+           <a href="index.html">Startseite</a>
           </li>
         </ul>
       </div>
@@ -50,8 +50,10 @@
         <legend>Suchergebnis</legend>
         </fieldset>
       </div>
+      
       <div id="menuefooter" class="clmenuefooter">
       </div>
+
       <div id="bottom">
       </div>
     </div>  
