--- a/verkaufsstelle_aktualisieren.html
+++ b/verkaufsstelle_aktualisieren.html
@@ -7,6 +7,7 @@
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/nav.css" rel="stylesheet" />
   </head>
+
   <body>
     <div id="main">
       <div id="trailer">
@@ -15,7 +16,7 @@
       <div id="menuetop">
         <ul id="menu">
           <li>
-           <a href="index.html">HOME</a>
+           <a href="index.html">Startseite</a>
           </li>
         </ul>
       </div>
@@ -88,8 +89,10 @@
           </fieldset>
         </form>
       </div>
+      
       <div id="menuefooter" class="clmenuefooter">
       </div>
+
       <div id="bottom">
       </div>
     </div>  
