--- a/bestehende_verkaufsstelle_schliessen.html
+++ b/bestehende_verkaufsstelle_schliessen.html
@@ -15,7 +15,7 @@
       <div id="menuetop">
         <ul id="menu">
           <li>
-           <a href="index.html">HOME</a>
+           <a href="index.html">Startseite</a>
           </li>
         </ul>
       </div>
@@ -47,8 +47,10 @@
           </fieldset>
         </form>
       </div>
+      
       <div id="menuefooter" class="clmenuefooter">
       </div>
+
       <div id="bottom">
       </div>
     </div>  
