--- a/index.html
+++ b/index.html
@@ -16,28 +16,26 @@
       <div id="menuetop">
         <ul id="menu">
           <li>
-           <a href="index.html">HOME</a>
+           <a href="index.html">Startseite</a>
+           <a href="lieferanten.html">Lieferanten</a>
+            <a href="verkaufsstellen.html">Stationsverwaltung</a>
           </li>
         </ul>
       </div>
+
       <!-- page content -->
       <div id="content">
-
-        Stationsverwaltung<br>
-        <a href="neue_verkaufsstelle_aufnehmen.html"> Verkaufsstelle er&ouml;ffnen </a><br>
-        <a href="Verkaufsstellen_auflisten.html"> Verkaufsstellen auflisten </a><br>
-        <a href="verkaufsstellen_standort_bestimmen.html"> Verkaufsstellenposition </a><br>
-        <a href="suche_verkaufsstellen_name.html"> Verkaufsstelle suchen </a><br>
-        <a href="verkaufsstelle_aktualisieren.html"> Verkaufsstelle bearbeiten </a><br>
-        <a href="bestehende_verkaufsstelle_schliessen.html"> Verkaufsstelle schliessen </a><br>
-
+        CONTENT
       </div>
+      
       <div id="menuefooter" class="clmenuefooter">
       </div>
+
       <div id="bottom">
       </div>
     </div>  
   </body>
+
 </html>
 
 
