--- a/verkaufsstellen.html
+++ b/verkaufsstellen.html
@@ -19,7 +19,7 @@
             <li>
                 <a href="/">Startseite</a>
                 <a href="lieferanten.html">Lieferanten</a>
-                <a href="verkaufsstellen.html"><b>Stationsverwaltung</b></a>
+                <a href="verkaufsstellen.html"><b>Verkaufsstellen</b></a>
             </li>
         </ul>
     </div>
