--- a/index.html
+++ b/index.html
@@ -1,42 +1,57 @@
 <!DOCTYPE HTML>
 <html>
-  <head>
-    <title>Allgold Premium Molkerei</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link href="css/main.css" rel="stylesheet" />
-    <link href="css/nav.css" rel="stylesheet" />
-  </head>
-  
-  <body>
-    <div id="main">
-      <div id="trailer">
-        <img src="media/trailer.jpg" width="750" height="150" alt="trailer">
-      </div>
-      <div id="menuetop">
-        <ul id="menu">
-          <li>
-           <a href="index.html">Startseite</a>
-           <a href="lieferanten.html">Lieferanten</a>
-            <a href="verkaufsstellen.html">Stationsverwaltung</a>
-          </li>
-        </ul>
-      </div>
 
-      <!-- page content -->
-      <div id="content">
-        CONTENT
-      </div>
-      
-      <div id="menuefooter" class="clmenuefooter">
-      </div>
+<head>
+  <title>Allgold Premium Molkerei</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="css/main.css" rel="stylesheet" />
+  <link href="css/nav.css" rel="stylesheet" />
+</head>
 
-      <div id="bottom">
-      </div>
-    </div>  
-  </body>
+<body>
+  <div id="main">
+    <div id="trailer">
+      <img src="media/trailer.jpg" width="750" height="150" alt="trailer">
+    </div>
+    <div id="menuetop">
+      <ul id="menu">
+        <li>
+          <a href="index.html">Startseite</a>
+          <a href="lieferanten.html">Lieferanten</a>
+          <a href="verkaufsstellen.html">Verkaufsstellen</a>
+        </li>
+      </ul>
+    </div>
+
+    <!-- page content -->
+    <div id="content">
+      <h2>Allgold Premium Molkerei GmbH</h2>
+      <p>Modern und traditionsbewusst
+        Seit dem Jahr 1892 sind wir in Kempten zu Hause, mitten im Herzen des Allgäus. Hier stellen wir unsere bekannten
+        und beliebten Markenprodukte her.
+      </p>
+      <p>
+        Aus dem Allgäu beziehen wir auch den wichtigsten Rohstoff – gute, frische
+        Milch. Von Milcherzeugern der unmittelbaren Umgebung, denen wir vertrauen.
+      </p>
+      <p>
+        Wir sind eines der größten und modernsten Werke der weltweit agierenden französischen Unternehmensgruppe SAVENCIA
+        S.A. 450 engagierte Menschen arbeiten jeden Tag daran, unsere Produkte immer weiter zu verbessern und unseren
+        Kunden hochwertigen und leckeren Milchgenuss zu bieten.
+      </p>
+      <p>
+        Wir fühlen uns der Tradition und nachhaltigem Wirtschaften verpflichtet. Und wir haben den Mut, neue Wege zu
+        beschreiten. Diese Verbindung macht uns so erfolgreich.
+      </p>
+    </div>
+
+    <div id="menuefooter" class="clmenuefooter">
+    </div>
+
+    <div id="bottom">
+    </div>
+  </div>
+</body>
 
 </html>
-
-
-
