syntax error fix

--- a/verkaufsstelle_aktualisieren.html
+++ b/verkaufsstelle_aktualisieren.html
@@ -30,7 +30,7 @@
             <div class="form-group">
               <label class="col-md-4 control-label" for="stationID">StationsID</label>  
               <div class="col-md-4">
-                <input id="stationID" name="stationID" placeholder="0 class="form-control input-md" required="" type="text">
+                <input id="stationID" name="stationID" placeholder="0" class="form-control input-md" required="" type="text">
               </div>
             </div>
 
